2006-10-30  Sven Panne  <sven.panne@aedion.de>

	* src/al_buffer.c: Fixed AL_SIZE buffer query.

	* src/al_threadlib.c: Simplified POSIX threading a bit.

	* src/al_dlopen.c, src/al_dlopen.h: Reverted changes to dlopen stuff.

	* src/arch/i386/x86_simd_support_prk.h: Warning police.

	* src/Makefile.am: Use local headers when compiling convenience library,
	this unbreaks the compilation when no/old OpenAL headers are already
	installed on the system.

2006-10-29  Prakash Punnoor <prakash@punnoor.de>

	* src/backends/alc_backend_wave.c: fix MSVC compilation

	* src/arch/i386/x86_simd_support_prk.h: silence MinGW warning

2006-10-28  Prakash Punnoor <prakash@punnoor.de>

	* src/al_filter.c: use unsigned for len to silence warning

	* src/arch/i386/x86_simd_support_prk.h: remove unneeded types

	* src/arch/i386/mixaudio16_mmx_prk.c,
	src/arch/i386/mixaudio16_sse2_prk.c: correct calling convention

	* src/extensions/al_ext_mp3.c: use new dlopen framework

	* src/al_ext.c, src/al_ext.h, src/extensions/al_ext_mp3.c,
	src/extensions/al_ext_vorbis.c: add and use internal _alGetProcAddress
	to silence warnings

	* src/al_dlopen.c, src/al_dlopen.h: move one-liners into header

2006-10-27  Sven Panne  <sven.panne@aedion.de>

	* src/alc/alc_device.c: Fixed a race condition in alcCloseDevice
	(pointed out by Elias Naur).

2006-10-27  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: detect more compilers; more FIND_PACKAGE conversions,
	revamp SIMD enabling to ensure portable code production, x86 objects
	should be compiled even if no SIMD found

	* admin/CMakeModules/DetectCompiler.cmake: added

	* admin/CMakeModules/CompilerSIMD.cmake: added

	* src/al_mixfunc.c, src/mixaudio16.h, src/arch/i386/x86_cpu_caps_prk.c
	src/arch/i386/x86_simd_support_prk.h, src/arch/i386/mixaudio16_sse2_prk.c
	src/arch/i386/mixaudio16_mmx_prk.c, src/arch/i386/mixaudio16_sse2_prk.h
	src/arch/i386/mixaudio16_mmx_prk.h, src/arch/i386/x86_floatmul.c
	src/al_mixer.h: manually enable SIMD
