@@ -20,4 +20,8 @@ extern AL_DLFunPtr alDLFunSym_ (AL_DLHandle handle, const char *name);
 
 extern const char *alDLError_ (void);
 
+extern AL_DLFunPtr alDLDataPtrAsFunPtr_ (AL_DLDataPtr);
+
+extern AL_DLDataPtr alDLFunPtrAsDataPtr_ (AL_DLFunPtr);
+
 #endif /* not AL_AL_DLOPEN_H_ */
