@@ -1,5 +1,9 @@
 2006-10-30  Sven Panne  <sven.panne@aedion.de>
 
+	* src/al_dlopen.c, src/al_dlopen.h, src/al_ext.c, src/alc/alc_context.c:
+	Centralized casts which are not allowed in ISO C. They are necessary,
+	anyway, due to API bugs in POSIX and OpenAL.
+
 	* src/al_buffer.c: Fixed AL_SIZE buffer query.
 
 	* src/al_threadlib.c: Simplified POSIX threading a bit.
